--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
         <!-- Text Link -->
         <section class="section">
             <h2>📰 Featured Article</h2>
-            <p><a href="info.txt" target="_blank">Click here to read our latest article</a></p>
+            <p>Welcome to The Journal Journey
+
+                Because every place has a story and so do I.
+
+                The Journal Journey is my corner of the internet — a place where I share my experiences, one story at a
+                time. From quiet hills to colorful cities, it’s where moments turn into memories and memories find their
+                words.
+
+                Here, I write what I see, feel and learn along the way — not just about places but about the little
+                things that make them special. It’s not about perfect travel plans, it’s about the journey itself —
+                slow, real and full of stories worth telling.
+
+                So, if you love simple stories and honest experiences, you’re in the right place. Welcome to my journey.
+            </p>
         </section>
 
         <!-- Image Gallery Section -->
